
This file lists new features and major changes to **Norman**.  For a detailed
changelog, see the mercurial log.


Norman-0.6.3
------------

*Release Date: Not yet released*

-   Add a `serialise.Serialiser.uid` convenience method.
-   Add support for optional keyword arguments to serialisers.
-   Add a new `~serialise.CSV` serialiser.
-   Add an *autoindex* class attribute to `Field` objects.


Norman-0.6.2
------------

*Release Date: 2012-09-03*

-   Hooks added to `Table` to allow more control over validation.
-   Add `Query.field`, allowing queries to traverse tables.
-   Add `Query.add`, allowing records to be created based on query criteria.
-   Add a return value when calling `Query` objects.
-   `Field` level validation added, including some validator factories.
-   Add built-in support for many-to-many joins.
-   Add `validate.todatetime`, `validate.todate` and `validate.totime`.
-   Deprecated the `tools` module.


Norman-0.6.1
------------

*Release Date: 2012-07-12*

-   New serialiser framework added, based on `serialise.Serialiser`.
    A sample serialiser, `serialise.Sqlite` is included.
-   `serialise.Sqlite3` has been deprecated.
-   Documentation overhauled introducing major changes to the documentation
    layout.
-   Add boolean comparisons, `Query.delete` and `Query.one` methods to `Query`.
-   `Table` now supports inheritance by copying its fields.
-   Several changes to implementations, generally to improve performance and
    consistency.


Norman-0.6.0
------------

*Release Date: 2012-06-12*

-   Python 2.6 support by Ilya Kutukov
-   Move serialisation functions to a new serialise module.  This module
    will be expanded and updated in the near future.
-   Add sensible `repr` to `Table` and `NotSet` objects
-   `Query` object added, introducing a new method of querying tables,
    involving `Field` and `Query` comparison operators.
-   `Join` class created, which will replace `Group` in 0.7.0.